--- a/LibraryManagementSystem.AppConfigure/LibraryManagementSystem.AppConfigure.csproj
+++ b/LibraryManagementSystem.AppConfigure/LibraryManagementSystem.AppConfigure.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="microsoft.aspnetcore.app" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
