--- a/LibraryManagementSystem.BLL/LibraryManagementSystem.BLL.csproj
+++ b/LibraryManagementSystem.BLL/LibraryManagementSystem.BLL.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Contract\" />
+    <Folder Include="Manager\" />
+  </ItemGroup>
+
 </Project>
