ApplicationDbContext,ConnectionString configuration

--- a/LibraryManagementSystem/appsettings.json
+++ b/LibraryManagementSystem/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    "ApplicationDbContext": "Server=RAKTIM-PC;Database=LibraryManagement;Trusted_Connection=true"
+  } 
 }
