model class added and dbset<>

--- a/LibraryManagementSystem.DbContext/LibraryManagementSystem.DbContext.csproj
+++ b/LibraryManagementSystem.DbContext/LibraryManagementSystem.DbContext.csproj
@@ -5,7 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ApplicationDbContext\" />
+    <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryManagementSystem.Models\LibraryManagementSystem.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.EntityFrameworkCore">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.entityframeworkcore\2.2.0\lib\netstandard2.0\Microsoft.EntityFrameworkCore.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
