--- a/LibraryManagementSystem.AppConfigure/LibraryManagementSystem.AppConfigure.csproj
+++ b/LibraryManagementSystem.AppConfigure/LibraryManagementSystem.AppConfigure.csproj
@@ -6,6 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="microsoft.aspnetcore.app" Version="2.2.0" />
+    <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryManagementSystem.DbContext\LibraryManagementSystem.DbContext.csproj" />
   </ItemGroup>
 
 </Project>
