Interfaces added in Repository

--- a/LibraryManagementSystem.Repositories/LibraryManagementSystem.Repositories.csproj
+++ b/LibraryManagementSystem.Repositories/LibraryManagementSystem.Repositories.csproj
@@ -5,8 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contract\" />
     <Folder Include="Repository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryManagementSystem.Models\LibraryManagementSystem.Models.csproj" />
   </ItemGroup>
 
 </Project>
