--- a/LibraryManagementSystem.BLL/LibraryManagementSystem.BLL.csproj
+++ b/LibraryManagementSystem.BLL/LibraryManagementSystem.BLL.csproj
@@ -5,11 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Manager\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\LibraryManagementSystem.Models\LibraryManagementSystem.Models.csproj" />
+    <ProjectReference Include="..\LibraryManagementSystem.Repositories\LibraryManagementSystem.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
