dbcontext namespace changes and apply migration

--- a/LibraryManagementSystem/appsettings.json
+++ b/LibraryManagementSystem/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": {
+  "ConnectionStrings": {
     "ApplicationDbContext": "Server=RAKTIM-PC;Database=LibraryManagement;Trusted_Connection=true"
   } 
 }
